# infgeom

./: Cargo.toml  LICENSE-APACHE  README.md
examples/: simplex_distances.rs
proptest-regressions/: lib.txt
src/: lib.rs
